--- a/results/regressions.tex
+++ b/results/regressions.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Tue, Jun 27, 2023 - 7:47:34 PM
+% Date and time: Fri, Oct 27, 2023 - 11:23:56 AM
 \begin{table}[!htbp] \centering 
   \caption{Regressions estimating effect of immediate feedback (Z) on various outcomes. Classroom fixed effects included in model, omitted from table.} 
   \label{} 
@@ -11,50 +11,48 @@
 \cline{2-5} 
  & Posttest & State Test & \% Probs. Worked & \% Correct 1st Try \\ 
 \hline \\[-1.8ex] 
- Constant & $-$1.581$^{**}$ & $-$3.961$^{***}$ & 0.726$^{***}$ & $-$0.066 \\ 
-  & (0.507) & (0.381) & (0.170) & (0.089) \\ 
- Z & 0.080 & 0.013 & $-$0.063$^{***}$ & 0.032$^{***}$ \\ 
+ Constant & $-$1.616$^{**}$ & $-$3.951$^{***}$ & 0.726$^{***}$ & $-$0.038 \\ 
+  & (0.506) & (0.382) & (0.170) & (0.087) \\ 
+ Instant Feedback 0.082 & 0.013 & $-$0.063$^{***}$ & 0.035$^{***}$ \\ 
   & (0.046) & (0.031) & (0.013) & (0.007) \\ 
- pretestC & 0.005 & 0.040$^{*}$ & 0.023$^{***}$ & 0.006$^{*}$ \\ 
-  & (0.027) & (0.019) & (0.005) & (0.003) \\ 
- Scale\_Score5imp & 0.001 & 0.006$^{***}$ & 0.0001 & 0.001$^{***}$ \\ 
+ Pretest & 0.044$^{*}$ & 0.044$^{***}$ & 0.023$^{***}$ & 0.008$^{***}$ \\ 
+  & (0.017) & (0.012) & (0.005) & (0.002) \\ 
+ State Test 5th Gr. & 0.001 & 0.006$^{***}$ & 0.0001 & 0.001$^{***}$ \\ 
   & (0.001) & (0.0005) & (0.0002) & (0.0001) \\ 
- ScaleScore5miss & $-$0.089 & $-$0.144$^{**}$ & $-$0.009 & 0.00001 \\ 
-  & (0.074) & (0.054) & (0.020) & (0.012) \\ 
- raceHispanic/Latino & 0.087 & $-$0.054 & $-$0.019 & 0.005 \\ 
-  & (0.089) & (0.052) & (0.023) & (0.015) \\ 
- raceAsian & 0.181 & 0.016 & 0.006 & 0.021 \\ 
-  & (0.095) & (0.056) & (0.024) & (0.014) \\ 
- raceOther & 0.146 & $-$0.116 & $-$0.014 & 0.008 \\ 
-  & (0.092) & (0.065) & (0.024) & (0.017) \\ 
- MALE & $-$0.085 & 0.037 & $-$0.064$^{***}$ & $-$0.009 \\ 
-  & (0.051) & (0.034) & (0.014) & (0.008) \\ 
- EIP & $-$0.010 & $-$0.133$^{*}$ & $-$0.002 & $-$0.028 \\ 
-  & (0.072) & (0.066) & (0.027) & (0.018) \\ 
- ESOL & 0.036 & $-$0.100 & $-$0.015 & 0.003 \\ 
-  & (0.106) & (0.071) & (0.030) & (0.018) \\ 
- IEP & 0.017 & $-$0.115$^{*}$ & 0.026 & $-$0.011 \\ 
-  & (0.079) & (0.049) & (0.025) & (0.015) \\ 
- GIFTED & 0.223$^{**}$ & 0.182$^{**}$ & 0.026 & 0.011 \\ 
-  & (0.084) & (0.055) & (0.023) & (0.010) \\ 
- accelerated & 0.353 & 0.506$^{***}$ & 0.136$^{*}$ & 0.061$^{*}$ \\ 
-  & (0.209) & (0.149) & (0.053) & (0.025) \\ 
- logTime & $-$0.043 & $-$0.022 & $-$0.055$^{***}$ & 0.041$^{***}$ \\ 
-  & (0.038) & (0.026) & (0.012) & (0.006) \\ 
- pre\_MA\_total\_scoreimp & $-$0.002 & $-$0.008$^{*}$ & $-$0.001 & 0.0002 \\ 
+Missing 5th Gr. & $-$0.083 & $-$0.146$^{**}$ & $-$0.009 & $-$0.012 \\ 
+  & (0.075) & (0.054) & (0.020) & (0.011) \\ 
+ Hispanic/Latino & 0.083 & $-$0.055 & $-$0.019 & $-$0.003 \\ 
+  & (0.090) & (0.051) & (0.023) & (0.014) \\ 
+ Asian & 0.207$^{*}$ & 0.016 & 0.006 & 0.024$^{*}$ \\ 
+  & (0.096) & (0.056) & (0.024) & (0.012) \\ 
+ Other & 0.141 & $-$0.118 & $-$0.014 & $-$0.001 \\ 
+  & (0.093) & (0.064) & (0.024) & (0.015) \\ 
+ MALE & $-$0.068 & 0.036 & $-$0.064$^{***}$ & $-$0.005 \\ 
+  & (0.051) & (0.034) & (0.014) & (0.007) \\ 
+ EIP & $-$0.014 & $-$0.134$^{*}$ & $-$0.002 & $-$0.038$^{*}$ \\ 
+  & (0.072) & (0.065) & (0.027) & (0.016) \\ 
+ ESOL & 0.044 & $-$0.099 & $-$0.015 & $-$0.002 \\ 
+  & (0.107) & (0.071) & (0.030) & (0.016) \\ 
+ IEP & 0.053 & $-$0.117$^{*}$ & 0.026 & $-$0.009 \\ 
+  & (0.081) & (0.049) & (0.025) & (0.014) \\ 
+ GIFTED & 0.232$^{**}$ & 0.182$^{**}$ & 0.026 & 0.004 \\ 
+  & (0.084) & (0.055) & (0.023) & (0.009) \\ 
+ accelerated & 0.370 & 0.509$^{***}$ & 0.136$^{*}$ & 0.053$^{*}$ \\ 
+  & (0.209) & (0.150) & (0.053) & (0.021) \\ 
+ log(Pretest Time) & $-$0.039 & $-$0.022 & $-$0.055$^{***}$ & 0.037$^{***}$ \\ 
+  & (0.039) & (0.026) & (0.012) & (0.006) \\ 
+ Math Anx. & $-$0.002 & $-$0.008$^{*}$ & $-$0.001 & 0.0001 \\ 
   & (0.005) & (0.004) & (0.002) & (0.001) \\ 
- pre\_MSE\_total\_scoreimp & 0.014$^{*}$ & 0.013$^{*}$ & 0.001 & 0.002$^{*}$ \\ 
+Math Self Eff. & 0.013$^{*}$ & 0.013$^{**}$ & 0.001 & 0.003$^{**}$ \\ 
   & (0.006) & (0.005) & (0.002) & (0.001) \\ 
- pre\_PS\_tasks\_total\_scoreimp & 0.038$^{**}$ & 0.019 & 0.011$^{**}$ & 0.006$^{**}$ \\ 
+ Perc. Sens. & 0.040$^{**}$ & 0.019 & 0.011$^{**}$ & 0.006$^{**}$ \\ 
   & (0.015) & (0.010) & (0.004) & (0.002) \\ 
- pretestMiss & $-$0.371$^{**}$ & $-$0.246$^{***}$ & $-$0.304$^{***}$ & $-$0.018 \\ 
-  & (0.139) & (0.064) & (0.027) & (0.022) \\ 
- posPart(pretestC + 1) & 0.069 & 0.007 &  &  \\ 
-  & (0.041) & (0.027) &  &  \\ 
+ Missing Pretest & $-$0.317$^{*}$ & $-$0.250$^{***}$ & $-$0.304$^{***}$ & $-$0.005 \\ 
+  & (0.139) & (0.063) & (0.027) & (0.022) \\ 
 \hline \\[-1.8ex] 
-Observations & 776 & 971 & 1,129 & 837 \\ 
-R$^{2}$ & 0.609 & 0.783 & 0.604 & 0.678 \\ 
-Adjusted R$^{2}$ & 0.529 & 0.744 & 0.543 & 0.614 \\ 
+Observations & 784 & 975 & 1,129 & 996 \\ 
+R$^{2}$ & 0.605 & 0.784 & 0.604 & 0.674 \\ 
+Adjusted R$^{2}$ & 0.522 & 0.745 & 0.543 & 0.619 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001} \\ 
